add rrtDubins(not work) and modify demo.launch, change the planner_type to use diff planner without re-compile the code

--- a/src/path_planner/CMakeLists.txt
+++ b/src/path_planner/CMakeLists.txt
@@ -39,10 +39,12 @@ add_library(${PROJECT_NAME}
         src/frame/plannerBase.cpp
         src/planner/astar.cpp
         src/planner/rrt.cpp
+        src/planner/rrtDubins.cpp
         src/planner/rrtStar.cpp
         src/planner/dubinsPlanner.cpp
         src/tool/KDTree/KDTree.cpp
         src/tool/dubins/dubinsCurve.cpp
+        src/tool/toolfunc.cpp
         )
 
 
